# openstack-ovh-vm-orchestrator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLOUDS.md  CONTRIBUTING.md  Dockerfile  LICENSE  OVH_REGION_FIX.md  OVH_SETUP.md  PYTHON_SETUP.md  QUICKSTART.md  QUICK_START.md  README.md  clouds.yaml.example  docker-compose.yml  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  schema.json
.github/workflows/: tests.yml
api/: __init__.py  main.py
api/api/routes/: flavor.py  image.py  network.py  ssh_key.py  vm.py  volume.py
api/api/schemas/: flavor.py  image.py  network.py  ssh_key.py  vm.py
api/core/: __init__.py  exceptions.py  models.py
api/engine/: __init__.py  openstack_engine.py
api/providers/: __init__.py  base.py  factory.py  mock_provider.py  openstack_provider.py
api/services/: flavor_service.py  image_service.py  network_service.py  ssh_key_service.py  vm_service.py  volume_service.py
api/utils/: __init__.py
app/: main.py
app/api/: __init__.py
app/api/routes/: __init__.py  vm.py  volume.py
app/api/schemas/: __init__.py  common.py  volume.py
app/core/: config.py  models.py
app/engine/: __init__.py  openstack_engine.py
app/providers/: base.py  factory.py  mock_provider.py  openstack_provider.py
app/services/: __init__.py  vm_service.py  volume_service.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  ENHANCEMENTS.md  FAQ.md  IMAGE_GUIDE.md  LAB_ASSESSMENT.md  Lab_Assessment.docx  ROADMAP.md  TROUBLESHOOTING.md
engine/: __init__.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/common/: ErrorAlert.tsx  LoadingSpinner.tsx  MetadataViewer.module.css  MetadataViewer.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  FlavorList.tsx  ImageList.tsx  NetworkList.tsx  NotFound.tsx  SSHKeyList.tsx  Settings.tsx  SnapshotList.tsx  VmList.tsx  VolumeList.tsx
frontend/src/services/: api.ts  cloudService.ts  flavorService.ts  imageService.ts  networkService.ts  sshKeyService.ts  vmService.ts  volumeService.ts
frontend/src/stores/: cloudStore.ts  snapshotStore.ts  volumeStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
tests/: conftest.py
tests/integration/: test_vm_endpoints.py
tests/unit/: test_services.py
